# backports.tarfile

./: .coveragerc  NEWS.rst  README.rst  conftest.py  pyproject.toml  setup.cfg
backports/tarfile/: __init__.py
backports/tarfile/compat/: py38.py
docs/: conf.py  index.rst
newsfragments/: +0ba29f0e.feature.rst  +96333363.removal.rst  +df7ee3db.bugfix.rst  2.feature.rst  4.feature.rst  5.bugfix.rst
tests/: test_tarfile.py
tests/compat/: archiver_tests.py  py310.py  py38.py  py39.py
