[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "backports.tarfile"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Backport of CPython tarfile module"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jaraco/backports.tarfile"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 6, != 8.1.*",

	# local
	"jaraco.test",
	# workaround for pytest-dev/pytest#12219
	"pytest != 8.0.*",
]

doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

check = [
	"pytest-checkdocs >= 2.4",
	# "pytest-ruff >= 0.2.1; sys_platform != 'cygwin'",
]

cover = [
	"pytest-cov",
]

enabler = [
	"pytest-enabler >= 2.2",
]

type = [
	# upstream
	# "pytest-mypy",

	# local
]


[tool.setuptools_scm]


[tool.pytest-enabler.mypy]
# Disabled due to jaraco/skeleton#143
